# MCV25

./: .gitignore  CMakeLists.txt  README.md  can.cpp  can.h  can_ids.h  main_full.cpp  main_wakeword.cpp
model-parameters/: model_metadata.h  model_variables.h
tflite-model/: tflite_learn_5_compiled.cpp  tflite_learn_5_compiled.h
